tests/snapshots/run_wpt_conformance__onnx_erf_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float16 1D constant tensor",
    "onnx",
    "PASS",
)
